--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
+osx_image: beta-xcode6.3
 xcode_project: GSCrypto.xcodeproj
 xcode_scheme: GSCrypto
 xcode_sdk: iphonesimulator
