--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: objective-c
-osx_image: xcode6.4
-xcode_project: GSCrypto.xcodeproj
-xcode_scheme: GSCrypto
-xcode_sdk: iphonesimulator
+osx_image: xcode7
+before_install:
+  - gem install xcpretty
+before_script:
+  - set -o pipefail
+script:
+  - xcodebuild -project GSCrypto.xcodeproj -scheme GSCrypto -destination 'platform=iOS Simulator,name=iPhone 6s' -sdk iphonesimulator test | xcpretty -c
